Update README.md
Added notes about running/compiling, dependencies, and features