@@ -1,2 +1,26 @@
 # ConwayGameOfLife-Java
-A java implementation of conway's game of life simulation
+
+A java implementation of conway's game of life simulation. It offer both text and GUI mode. This will be choosen based on the user input from the console menu first presented with running the program.
+
+# Features
+
+* Text mode
+* GUI mode
+* Single Step
+* Multi-step
+
+# Dependencies
+
+Open Java FX (openjfx)
+
+# How to compile
+
+javac --module-path /path/to/javafx/lib/folder --add-modules ALL-MODULE PATH ConwayGoL.java
+
+# How to run
+
+java --module-path /pther/to/javafx/lib/folder --add-modules ALL-MODULE-PATH ConwayGoL
+
+# Notes about running program
+
+This program was written and test against Java 12 and against openjfx 11 (current LTS). 
